feat: load required pension capital
